deployment-test.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: nginx-test-website
      app.kubernetes.io/component: nginx-test-website
      app.kubernetes.io/instance: nginx-test-website
    name: nginx-test-website
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: nginx-test-website
    template:
      metadata:
        labels:
          deploymentconfig: nginx-test-website
      spec:
        containers:
        - image: nginx-test-website
          imagePullPolicy: Always
          name: nginx-test-website
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - nginx-test-website
        from:
          kind: ImageStreamTag
          name: nginx-test-website:test
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: nginx-test-website
      app.kubernetes.io/component: nginx-test-website
      app.kubernetes.io/instance: nginx-test-website
    name: nginx-test-website
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: nginx-test-website
      app.kubernetes.io/component: nginx-test-website
      app.kubernetes.io/instance: nginx-test-website
    name: nginx-test-website
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: nginx-test-website
      weight: 100
    wildcardPolicy: None
